WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58700
With PAN_SCROLLING, mousedown events for a mouse button aren't dispatched while pressing-and-holding another mouse button
https://bugs.webkit.org/show_bug.cgi?id=58700
Summary
With PAN_SCROLLING, mousedown events for a mouse button aren't dispatched whi...
Daniel Bates
Reported
2011-04-15 15:13:21 PDT
On platforms that build with PAN_SCROLLING enabled (this includes all Windows ports), mousedown events aren't fired while pressing and holding another mouse button. For example, suppose you press and hold on an DOM element with the left mouse button and then press the right mouse button. Disregarding mousemove events, the following events are fired (in order): mousedown (left mouse button). But, we should have fired the following events (in order): mousedown (left mouse button), mousedown (right mouse button).
Attachments
Patch and layout test
(13.70 KB, patch)
2011-04-15 15:53 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Self-contained Layout Test
(17.13 KB, text/html)
2011-04-15 16:01 PDT
,
Daniel Bates
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2011-04-15 15:53:29 PDT
Created
attachment 89867
[details]
Patch and layout test While working on this patch I noticed that we could increase our test coverage for pan scrolling. I filed
bug #58702
for one such layout test we could add.
Daniel Bates
Comment 2
2011-04-15 16:01:10 PDT
Created
attachment 89868
[details]
Self-contained Layout Test For convenience, a self-contained version of the layout test included in the patch.
Daniel Bates
Comment 3
2011-04-18 20:21:16 PDT
Comment on
attachment 89867
[details]
Patch and layout test Clearing flags on attachment: 89867 Committed
r84217
: <
http://trac.webkit.org/changeset/84217
>
Daniel Bates
Comment 4
2011-04-18 20:21:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug